# starknet-dai-bridge

./: .env.ci  .env.deployer  .env.deployments  .env.example  .eslintrc.json  .gitignore  README.md  ]  derive_keys.ts  hardhat.config.ts  integration.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  slither.config.json  tsconfig.json
.github/workflows/: amarna.yml  check.yml  lint.yml  slither.yml  tests.yml
contracts/l1/: DAI.sol  L1DAIBridge.sol  L1DAITeleportGateway.sol  L1DAITokenBridge.sol  L1DAIWormholeBridge.sol  L1DAIWormholeGateway.sol  L1Escrow.sol  L1EscrowMom.sol  L1GovernanceRelay.sol  Proxy.sol  Spells.sol  TeleportGUID.sol  WormholeGUID.sol  (+4 more)
deploy/: L1DAITokenBridge.ts  L1Escrow.ts
docs/: architecture.excalidraw  development.md  e2e.md  teleport.excalidraw  transaction-lifecycle.excalidraw  wormhole.excalidraw
eth-sdk/: config.ts
l2/: l2_dai_bridge.cairo
scripts/: Signer.py  account.ts  approvals-goerli.sh  approvals.sh  attestations.ts  chain.sh  common.ts  compile.py  constant_points.json  contracts.json  createSpell.ts  deploy-bridge.ts  deploy-deployer.ts  deploy-goerli.sh  deploy-wormhole.ts  deploy.py  deploy.sh  deploy.ts  deployBridge.ts  deployBridgeUpgrade.ts  deployDeployer.ts  deployEscrowMom.ts  deployGoerli.ts  deployGovRelayUpgrade.ts  deployProxy.ts  deploySpell.ts  deployTeleport.ts  deployWormhole.ts  fetch.py  fork.ts  initialize.py  interact.py  interact.ts  oracle.ts  setBalance.ts  signature.js  spell.ts  starknet.ts  test-e2e.sh  testIntegration.ts  (+4 more)
test/: integration.ts  utils.ts
(+77 files in other folders)
