[tool.poetry]
name = "starknet-dai-bridge"
version = "0.0.1"
description = "Starknet DAI bridge"
authors = ["MakerDAO"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pytest = "^6.2.5"
pytest-asyncio = "0.15.1"
cairo-lang = "0.10.0"
lark = "0.11.3"
cairo-nile = "^0.9.0"
dill = "0.3.4"
pytest-xdist = "2.4.0"
pytest-order = "^1.0.1"
starknet-devnet = "0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = {version = "^21.9b0", allow-prereleases = true}
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
