[tool.poetry]
name = "starknet-dai-bridge"
version = "0.0.1"
description = "Starknet DAI bridge"
authors = ["MakerDAO"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
cairo-lang = "0.11.2"
dill = "0.3.4"
starknet-devnet = "0.5.3"
slither-analyzer = "0.8.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = {version = "^21.9b0", allow-prereleases = true}
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
